css/style.css
/* --------------------------------------------------- */
/* Basic Setup */
/* --------------------------------------------------- */

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
 	}

html {
	color: #555;
	font-family: 'VT323', monospace, 'Arial', sans-serif;
	font-weight: 400;
	font-size: 20px;
	text-rendering: optimizeLegibility;
	}


/* --------------------------------------------------- */
/* Header */
/* --------------------------------------------------- */
body {background-color: #ffdfaa; /*#ffd999*/}

header {margin-bottom: 10%;
height: 615px;}

.main-cont {
	padding-left: 1%;
	padding-right: 1%;
	margin-top: 5%;
	margin-right:1%; 
	margin-left:1%;
	margin-bottom: 1%;
	text-align: center;
}

/*----------headers---------------*/

h1{
	font-weight: 900;
	font-style: italic;
	word-spacing: 15px;
	font-size: 350%;
}

h2 {font-weight: 900;}

h4 {font-weight: 500;}

h1, h2, h4, #replay {
	font-family: 'Alegreya Sans SC', sans-serif;
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 1%;
	margin-top:1%;
}


#title {margin-bottom: 5%;}


.start-btn {
	width: 20%;
	height: 20%;
	cursor:pointer;
	font-size: 150%;
	text-transform: uppercase;
	font-family: 'Alegreya Sans SC', sans-serif;
	font-weight: 500;
	padding: 2%;
	margin-top: 5%;
	margin-bottom: 5%;
	-webkit-transition: background 1s ease-in-out;
	transition: background 1s ease-in-out;
}

.start-btn:hover {
	background-color: black;
	color: white;
}

.highest-score {
	font-family: 'Alegreya Sans SC', sans-serif;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	width:150px;
	height: 80px;
	border: 1px solid black;
	margin: 0 auto;
	font-size: 300%;
}

/* --------------------------------------------------- */
/* Game Board Section */ /*board makes 24 cards*/
/* --------------------------------------------------- */
section {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	margin-bottom: 5%;
	position:  relative;
	height: 100vh;
}

#game-table {
	width: 86%;
	height: auto;
	margin-left: 2%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	    -ms-flex-flow: row wrap;
	        flex-flow: row wrap;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-ms-flex-line-pack: start;
	    align-content: flex-start;
	-webkit-transition: background 1s;
	transition: background 1s;
}

/*----------Game Over Section---------------*/

.game-over {
	background-color: rgba(0, 0, 0, 0.9);
	color: white;
	position:  absolute;
	z-index: 20;
	margin: 2% 12%;
	height: 90%;
	width: 66%;
	display: none;
	-ms-flex-item-align: center;
	    -ms-grid-row-align: center;
	    align-self: center;
	-ms-flex-line-pack: center;
	    align-content: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
}


.game-over img {
	margin-top: 1.5%;
	height: 230px;
	margin-bottom: 0.5%;
}

.over-title {font-family: 'VT323', monospace;}


#replay {
	background-color: rgba(255, 255, 255, 0.8);
	color: black;
	margin-top: 1%;
	font-size: 160%;
	margin-right: 27%;
	margin-left: 27%;
	padding: 2%;
}

/*----------Cards---------------*/

.container-card {
	height: 140px;
	width: 15.5%;
	/*margin-top: 0.2%;*/
	margin: 0.5%;
	border: 1px solid #ffdfaa;
	position: relative;
	cursor: pointer;
	-webkit-perspective: 800px;
	        perspective: 800px;
}

.cards {
	
	width: 100%;
	height: 100%;
	position: absolute;
	-webkit-transform-style: preserve-3d;
	        transform-style: preserve-3d;
  	-webkit-transition: -webkit-transform 1s;
  	transition: -webkit-transform 1s;
  	transition: transform 1s;
  	transition: transform 1s, -webkit-transform 1s;
}

.cards div {
  margin: 0;
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
}

.cards .front {
  background: url("showMe.jpeg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}


.back {
  -webkit-transform: rotateY(180deg);
          transform: rotateY(180deg);
}

.cards.flipped {
  -webkit-transform: rotateY(180deg);
          transform: rotateY(180deg);
}

/*----------# of Clicks---------------*/
.total-clicks {
	text-align: center;
	margin-left: 1.5%;
	font-family: 'Alegreya Sans SC', sans-serif;
	-ms-flex-item-align: center;
	    -ms-grid-row-align: center;
	    align-self: center;
	padding-bottom: 0%;
	width: 7%;
}

.total-clicks>h4 {
	font-size: 115%;
	margin-bottom: 0.5%;

}

.clicks{
	margin-top: 0;
	font-size: 280%;
	text-align: center;
	font-weight: 500;
	/*font-style: italic;*/
}

.score {display: none;}

/* --------------------------------------------------- */
/* Media Queries */ 
/* --------------------------------------------------- */


/*large ipad to desktop/laptop */
@media only screen and (max-width: 1200px) {


}


/*small tablet Large Ipad */


@media only screen and (min-width: 768px) and (max-width: 1023px) {

.total-clicks > h4 {
	font-size: 100%;
	width: 8%;
	margin-bottom: 0%;
}

.start-btn {width: 20%;}


.clicks{
	margin-top: 0;
	font-size: 250%;
}

.container-card {height: 120px;}

h1 {font-size: 300%;}

}

/*Large Phones  to small tablets*/
@media only screen and (min-width: 481px) and (max-width: 767px) {
.total-clicks>h4 {
	font-size: 100%;
	border-bottom: 2px solid black;
}

.clicks{font-size: 160%;}

.total-clicks {
	margin: 0 auto;
	width: 23%;
}

.container-card {
	height: 140px;
	width: 23.5%;
}

h1 {font-size: 250%;}

.start-btn {
	width: 25%;
	margin-top: 15%;
	margin-bottom: 15%;}

.highest-score {
	font-size: 250%;
	width: 120px;
	height: 65px;
}

section {display: block;}

.game-over img {height: 160px;}
.game-over {
	height: 350px;
	margin: 40% 12%;
}

h4 {font-size: 95%;}

#replay {font-size: 110%;}

#game-table {margin-left: 4%;}
}

/*Small Phones */
@media only screen and (max-width: 480px) {
h1 {font-size: 170%;}
h2 {font-size: 120%;}
h4 {font-size: 90%;}
header {margin-bottom: 25%;}
.start-btn {
	width: 30%;
	margin-top: 35%;
	margin-bottom: 35%;
	font-size: 120%;
}

.highest-score {
	font-size: 230%;
	width: 100px;
	height: 60px;
}
.container-card {
	height: 110px;
	width: 31%;}

section {
	display: block;
}

.total-clicks {
	margin: 0 auto;
	width: 42%;
}

.total-clicks>h4 {
	font-size: 110%;
	border-bottom: 2px solid black;
}

.clicks{
	font-size: 200%;
}

#game-table {
    width: 100%;
    margin-left: 0.5%;
 }

.game-over {
	height: 350px;
	margin: 90% 12%;
}

.game-over img {
	height: 120px;
	margin: 3% 2%;
}

#replay {font-size: 95%;}

}

